# PFSOFTlib

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  README.md
benchmark/: CMakeLists.txt  benchmark_dsoft_for.cpp  benchmark_dsoft_for_efficiency.cpp  benchmark_dsoft_for_speedup.cpp  benchmark_dsoft_inv.cpp  benchmark_dsoft_inv_efficiency.cpp  benchmark_dsoft_inv_speedup.cpp  benchmark_dsoft_runtime_accuracy.cpp  benchmark_dwt_accuracy.cpp  benchmark_sofft_for.cpp  benchmark_sofft_for_efficiency.cpp  benchmark_sofft_for_speedup.cpp  benchmark_sofft_inv.cpp  benchmark_sofft_inv_efficiency.cpp  benchmark_sofft_inv_speedup.cpp
cmake_aux/: PSOFFTlib_FindFFTW.cmake  compiler_config.hpp.in
examples/: CMakeLists.txt  example.cpp  example_error.cpp  playground.cpp
include/: pdsoft  pfsoft  psofft
include/PDSOFTlib_headers/: compiler_config.hpp  complex.hpp  dsoft_fourier_coefficients.hpp  fftw_wrapper.hpp  fn_dwt.hpp  fn_flip.hpp  fn_fourier_transforms.hpp  forward_declarations.hpp  grid3D_cx.hpp  matrix.hpp  matrix_cx.hpp  random.hpp  stopwatch.hpp  vector.hpp  vector_cx.hpp
include/PFSOFTlib_headers/: compile_time_assertion.hpp  complex.hpp  creator.hpp  dsoft_fourier_coefficients.hpp  fftw_wrapper.hpp  fn_dwt.hpp  fn_flip.hpp  fn_fourier_transforms.hpp  forward_declarations.hpp  grid3D_cx.hpp  int2type.hpp  matrix.hpp  matrix_cx.hpp  random.hpp  select_type.hpp  small_object.hpp  smart_array.hpp  stopwatch.hpp  vector.hpp  vector_cx.hpp
include/PSOFFTlib_headers/: compiler_config.hpp  complex.hpp  dsoft_fourier_coefficients.hpp  fftw_wrapper.hpp  fn_dwt.hpp  fn_flip.hpp  fn_fourier_transforms.hpp  forward_declarations.hpp  grid3D_cx.hpp  matrix.hpp  matrix_cx.hpp  random.hpp  smart_array.hpp  stopwatch.hpp  vector.hpp  vector_cx.hpp
sofft/: CMakeLists.txt  sofft_test.cpp
src/: dsoft_fourier_coefficients.cpp  fftw_wrapper.cpp  fn_dsoft.cpp  fn_idsoft.cpp  small_object.cpp  stopwatch.cpp
